// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chat prompt > should format prompt with system message and user-assistant-user messages 1`] = `
"you are a chatbot

USER: 1st user message
ASSISTANT: assistant message
USER: 2nd user message
ASSISTANT: "
`;

exports[`chat prompt > should format prompt with user message 1`] = `
"A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions.

USER: user message
ASSISTANT: "
`;

exports[`chat prompt > should format prompt with user-assistant-user messages 1`] = `
"A chat between a curious user and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the user's questions.

USER: 1st user message
ASSISTANT: assistant message
USER: 2nd user message
ASSISTANT: "
`;
